Visualisasi Informasi Online Retail V1

--- a/Visualisasi_Ecommerce_fix.ipynb
+++ b/Visualisasi_Ecommerce_fix.ipynb
@@ -19,7 +19,8 @@
     "\n",
     "**Oleh:** Evan (05211640000114)\n",
     "\n",
-    "Overview:\n",
+    "**Overview:**\n",
+    "\n",
     "Dataset ini berisi mengenai data transaksional yang terjadi antara Desember 2010 hingga Desember 2011 untuk retail online yang berbasis di UK. Perusahaan menjual suvenir hadiah yang unik. Kustomer dari perusahaan banyak yang berupa wholesaler.\n"
    ]
   },
